apps/base/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    http-ingress: "true"
